--- a/templates/template.html
+++ b/templates/template.html
@@ -17,6 +17,8 @@
     <script>
         function calcularCambio() {
             var amount = parseFloat(document.getElementById('amount').value);
+            console.log('Valor inserido: ' + amount);
+
 
             if (isNaN(amount)) {
                 alert('Por favor, insira um valor numérico válido.');
@@ -30,12 +32,17 @@
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4 && xhr.status === 200) {
                     var response = JSON.parse(xhr.responseText);
-                    var exchangeRate = parseFloat(response.valor_cotacao);
+                    var exchangeRate = parseFloat(response.valor_cotacao.replace(",", ".")); // Substitui "," por "." se necessário
+                    console.log('Valor da cotação: ' + exchangeRate);
                     var result = amount * exchangeRate;
                     var resultElement = document.getElementById('result');
                     resultElement.textContent = 'Resultado: ' + result.toFixed(2);
+
                 }
             };
+
+            
+
 
             xhr.send();
         }
