--- a/templates/template.html
+++ b/templates/template.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <h1>Cotação do Dólar</h1>
-    <p type="number" id="dolar">{{ valor_cotacao }}</p>
+    <p type="number" id="dolar">Valor do dolar hoje: {{ valor_cotacao }}</p>
 
     <form action="#" method="post">
-        <label for="amount">Insira o valor em reais (BRL):</label>
+        <label for="amount">Insira o valor (US):</label>
         <input type="text" id="amount" name="amount">
         <input type="button" value="Calcular" onclick="calcularCambio()">
     </form>
